# The-Video-Operation-Recognition-Project

./: README.md  app.py  pyproject.toml
Vid2Sec/: train_vid2seq_с.ipynb
first results/: VitClipGPT.ipynb  Итоги первых 2 недель.pptx
model/: model.py
notebooks/Vid2Sec/: train_vid2seq.ipynb
notebooks/VideoTransformer/: VideoTransformer_.ipynb
notebooks/Vit_CLIP_GPT/: VitClipGPT_training.ipynb
static/: style.css
templates/: index.html
