[project]
name = "video-op-recognition"
version = "0.1.0"
description = "Распознавание технологических операций"
authors = [
    { name="rina", email="a.glushchenko2@g.nsu.ru" }
]
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3",
    "flask-cors>=4.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers",
    "opencv-python",
    "uvicorn",
    "python-multipart"
]

[tool.setuptools]
packages = ["model"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

